--- a/themes/omid-dev/layouts/_default/search.html
+++ b/themes/omid-dev/layouts/_default/search.html
@@ -15,9 +15,9 @@
     </div>
     {{- end }}
     {{- if not (.Param "hideMeta") }}
-    <div class="post-meta">
+    <!-- <div class="post-meta">
         {{- partial "translation_list.html" . -}}
-    </div>
+    </div> -->
     {{- end }}
 </header>
 
