--- a/themes/omid-dev/layouts/_default/single.html
+++ b/themes/omid-dev/layouts/_default/single.html
@@ -22,7 +22,7 @@
     {{- if not (.Param "hideMeta") }}
     <div class="post-meta">
       {{- partial "post_meta.html" . -}}
-      {{- partial "translation_list.html" . -}}
+      <!-- {{- partial "translation_list.html" . -}} -->
       {{- partial "edit_post.html" . -}}
       {{- partial "post_canonical.html" . -}}
     </div>
