--- a/themes/omid-dev/layouts/_default/resume.html
+++ b/themes/omid-dev/layouts/_default/resume.html
@@ -64,9 +64,7 @@
           <li><i class="fa-solid fa-square-phone"></i><a target="_blank" href="tel:{{ .Site.Data.resume.contact.phone }}">{{ .Site.Data.resume.contact.phone }}</a></li>
           <li><i class="fa-solid fa-envelope"></i> <a target="_blank" href="mailto:{{ .Site.Data.resume.contact.email }}">{{ .Site.Data.resume.contact.email }}</a></li>
           <li class="d-print-none">
-            <i class="fa-solid fa-file-pdf"></i> <a target="_blank" href="/pdf">PDF</a>
-            |
-            <i class="fa-solid fa-print"></i> <a href="javascript:window.print();">Print</a></li>
+            <i class="fa-solid fa-file-pdf"></i> <a href="/resume/print" target="_blank">Print / PDF Version</a></li>
         </ul>
       </div>
       <div class="resume-contact">
