--- a/themes/omid-dev/layouts/_default/search.html
+++ b/themes/omid-dev/layouts/_default/search.html
@@ -21,11 +21,13 @@
     {{- end }}
 </header>
 
-<div id="searchbox">
+<div class="searchbox">
     <input id="searchInput" autofocus placeholder="{{ .Params.placeholder | default (printf "%s ↵" .Title) }}"
         aria-label="search" type="search" autocomplete="off" maxlength="64">
-    <ul id="searchResults" aria-label="search results"></ul>
+    
 </div>
 </div>{{/* end page-content */}}
+
+<div id="searchResults" aria-label="search results"></div>
 
 {{- end }}{{/* end main */}}
