--- a/themes/omid-dev/layouts/_default/resume-print.html
+++ b/themes/omid-dev/layouts/_default/resume-print.html
@@ -240,8 +240,10 @@
             }
         }
     </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    {{- $fontawesome := resources.Get "css/fontawesome.css" | minify | fingerprint }}
+    {{- $roboto := resources.Get "css/fonts.css" | minify | fingerprint }}
+    <link rel="stylesheet" href="{{ $fontawesome.RelPermalink }}">
+    <link rel="stylesheet" href="{{ $roboto.RelPermalink }}">
 </head>
 <body>
     <div class="no-print">
