--- a/themes/omid-dev/assets/css/core/reset.css
+++ b/themes/omid-dev/assets/css/core/reset.css
@@ -24,7 +24,7 @@ h6 {
 }
 
 body {
-    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Open Sans', sans-serif, Vazirmatn;
+    font-family: 'Inter', Vazirmatn, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Open Sans', sans-serif;
     font-size: 16px;
     line-height: 1.7;
     word-break: break-word;
