--- a/themes/omid-dev/assets/css/core/reset.css
+++ b/themes/omid-dev/assets/css/core/reset.css
@@ -34,6 +34,11 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+body:lang(fa) 	{
+    font-family: Vazirmatn, 'Inter' ,'Open Sans', sans-serif;
+}
+
+
 article,
 aside,
 figcaption,
